--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,6 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places&callback=initMap" async defer></script>
 </body>
 </html>
